<resources>
    <string name="app_name">WGU Planner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">WGU Planner</string>
    <string name="nav_header_subtitle">https://my.wgu.edu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="courses">Courses</string>
    <string name="terms">Terms</string>
    <string name="assessment">Assessment</string>
    <string name="mentors">Mentors</string>
    <string name="termdetails">Term Details</string>
    <string name="coursedetails">Course Details</string>
    <string name="Assessdetails">Assessment Details</string>
    <string name="Mentordetails">Mentor Details</string>
    <string name="backbtn">back</string>
    <string name="saveToolbar">Save</string>
    <string name="menu_delete">Delete</string>
    <string name="TermId">Term ID: </string>
    <string name="termTitle">Title: </string>
    <string name="StartDateLabel">Start Date:</string>
    <string name="EndDateLabel">End Date: </string>
    <string name="UntilDateLabel">Until</string>
    <string name="shareViaEmail">Email</string>
    <string name="GoalText">Goal Date:</string>
    <string name="StatusLabel">Status:</string>
    <string name="TypeLabel">Type:</string>
    <string name="CourseLabel">Course:</string>
    <string name="CourseListLabel">Where Used: </string>
    <string name="RemindMeLabel">Remind Me</string>
    <string name="MentorNameLabel">Name: </string>\
    <string name="EmailLabel">Email: </string>
    <string name="PhoneLabel">Phone: </string>
    <string name="channel_name">WGU Planner</string>
    <string name="channel_description">Schedule System</string>
</resources>
